--- a/index.html
+++ b/index.html
@@ -388,7 +388,9 @@
 
                     <!-- RIGHT LAST SECTION START -->
 
-                      <p class="right">
+                      <p style=" color: #75BF7A;
+                      text-align: center;
+                      font-size: 16px;">
                         All Rights Reserved tere by Codematics 2022</p>
 
                     <!-- RIGHT LAST SECTION END -->
